--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,8 @@
   </div>
 </nav>
 
-<div class="container">
 
-
-</div>
+//= blocks/b-intro-video/b-intro-video.html
 
 //= template/footer.html
 
