--- a/src/blocks/b-intro-video/b-intro-video.html
+++ b/src/blocks/b-intro-video/b-intro-video.html
@@ -1,4 +1,4 @@
-<div class="b-intro-video">
+<div class="b-intro-video" id="b-intro-video">
   <div class="b-intro-video__container">
     <video width="100%" height="100%" autoplay class="b-intro-video__movie" id="b-intro-video__movie">
       <source src="video/okpay.mp4" type="video/mp4" />
@@ -11,7 +11,7 @@
       <a href="#" class="b-intro-video__context-button">Get started</a>
     </div>
     <button type="button" class="b-intro-video__controls-play btn btn-default" id="b-intro-video__controls-play">
-      <i id="b-intro-video__controls-icon" class="fa fa-pause b-intro-video__controls-icon"></i>
+      <i class="fa b-intro-video__controls-icon"></i>
     </button>
   </div>
 </div>
