--- a/src/blocks/b-favorite-payment/b-favorite-payment.html
+++ b/src/blocks/b-favorite-payment/b-favorite-payment.html
@@ -1,25 +1,27 @@
-<div class="b-favorite-payment row text-center">
-  <div class="col-md-12">
-    <h2 class="b-favorite-payment-h2">
-      Use your favorite way to pay
-    </h2>
-    <div class="b-favorite-payment-center">
-      <div class="b-favorite-payment-center-item">
-        <img class="b-favorite-payment-center-item-img" src="img/visa.png" alt="">
+<div class="container">
+  <div class="b-favorite-payment row text-center">
+    <div class="col-md-12">
+      <h2 class="b-favorite-payment-h2">
+        Use your favorite way to pay
+      </h2>
+      <div class="b-favorite-payment-center">
+        <div class="b-favorite-payment-center-item">
+          <img class="b-favorite-payment-center-item-img" src="img/visa.png" alt="">
+        </div>
+        <div class="b-favorite-payment-center-item">
+          <img class="b-favorite-payment-center-item-img" src="img/master.png" alt="">
+        </div>
+        <div class="b-favorite-payment-center-item">
+          <img class="b-favorite-payment-center-item-img" src="img/maestro.png" alt="">
+        </div>
+        <div class="b-favorite-payment-center-item">
+          <img class="b-favorite-payment-center-item-img" src="img/visa-electron.png" alt="">
+        </div>
+        <div class="b-favorite-payment-center-item">
+          <img class="b-favorite-payment-center-item-img" src="img/master-electronic.png" alt="">
+        </div>
       </div>
-      <div class="b-favorite-payment-center-item">
-        <img class="b-favorite-payment-center-item-img" src="img/master.png" alt="">
-      </div>
-      <div class="b-favorite-payment-center-item">
-        <img class="b-favorite-payment-center-item-img" src="img/maestro.png" alt="">
-      </div>
-      <div class="b-favorite-payment-center-item">
-        <img class="b-favorite-payment-center-item-img" src="img/visa-electron.png" alt="">
-      </div>
-      <div class="b-favorite-payment-center-item">
-        <img class="b-favorite-payment-center-item-img" src="img/master-electronic.png" alt="">
-      </div>
+      <h6 class="b-favorite-payment-h6">plus 777 more payment methods</h6>
     </div>
-    <h6 class="b-favorite-payment-h6">plus 777 more payment methods</h6>
   </div>
 </div>
