--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 //= blocks/b-infographic/b-infographic.html
 <hr>
 //= blocks/b-cross-platform/b-cross-platform.html
+//= blocks/b-footer/b-footer.html
 //= template/footer.html
 
 
