--- a/src/blocks/b-services-features/b-services-features.html
+++ b/src/blocks/b-services-features/b-services-features.html
@@ -10,6 +10,7 @@
               </div>
             </div>
           <h6 class="b-services-features-box-content-h6">Online Banking</h6>
+          <span class="b-services-features-box-content-text">Banking becouse we are the best!</span>
         </a>
       </div><div class="col-md-4 b-services-features-col">
         <a href="#" class="b-services-features-box b-services-features-box-two">
@@ -19,6 +20,7 @@
             </div>
           </div>
           <h6 class="b-services-features-box-content-h6">Accepting Payments</h6>
+          <span class="b-services-features-box-content-text">Sample text becouse Accepting!</span>
         </a>
       </div><div class="col-md-4 b-services-features-col">
         <a href="#" class="b-services-features-box b-services-features-box-three">
@@ -28,6 +30,7 @@
             </div>
           </div>
           <h6 class="b-services-features-box-content-h6">Digital Wallet</h6>
+          <span class="b-services-features-box-content-text">Sample Wallet best!</span>
         </a>
       </div><div class="col-md-4 b-services-features-col">
         <a href="#" class="b-services-features-box b-services-features-box-four">
@@ -37,6 +40,7 @@
             </div>
           </div>
           <h6 class="b-services-features-box-content-h6">OKPAY Card</h6>
+          <span class="b-services-features-box-content-text">Sample text becouse we are the best!</span>
         </a>
       </div><div class="col-md-4 b-services-features-col">
         <a href="#" class="b-services-features-box b-services-features-box-five">
@@ -46,6 +50,17 @@
             </div>
           </div>
           <h6 class="b-services-features-box-content-h6">Money Transfers</h6>
+          <span class="b-services-features-box-content-text">Sample text becouse we are the best!</span>
+        </a>
+      </div><div class="col-md-4 b-services-features-col">
+        <a href="#" class="b-services-features-box b-services-features-box-six">
+          <div class="b-services-features-box-content">
+            <div class="b-services-features-box-img-container">
+              <img class="b-services-features-box-image" src="img/mass-payment.png">
+            </div>
+          </div>
+          <h6 class="b-services-features-box-content-h6">Mass Payments</h6>
+          <span class="b-services-features-box-content-text">Sample text becouse we are the best!</span>
         </a>
       </div>
     </div>
